--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "url": "https://github.com/redaphid/blinky-tape.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/redaphid/blinky-tape/issues"
   },
   "homepage": "https://github.com/redaphid/blinky-tape",
   "dependencies": {
+    "debug": "^2.2.0",
     "lodash": "^4.15.0",
     "serialport": "^4.0.1",
+    "tinycolor2": "^1.4.1",
     "when": "^3.4.6"
   }
 }
